[project]
name = "line-protocol"
version = "0.1.0"
description = "Influx line protocol parser"
authors = [{ name = "Maximiliano Curia", email = "maxy@gnuservers.com.ar" }]
license = { text = "MIT" }
dependencies = ["pyparsing>=3.1.4"]
requires-python = ">=3.12"
[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.3"]
